css/main.css
:root {
  --background: #fff;
  --text: #000;
  --sans: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, Helvetica, "Helvetica Neue", Ubuntu, Roboto, Noto, "Segoe UI", Arial, sans-serif;
  --serif: "New York", Charter, Georgia, Cambria, "Times New Roman", Times, serif;
  --mono: San Francisco Mono, Monaco, "Consolas", "Lucida Console", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
}
body {
  background: var(--background);
  color: var(--text);
  font-family: var(--serif);
  width: clamp(45ch, 50%, 75ch);
  margin: auto;
  padding-bottom: 20px;
  line-height: 1.3rem;
}
h1, h2, h3, h4, h5, h6 {
  font-family: var(--sans);
}
a {
  color: var(--text);
}
img {
    max-width: 100%
}
@media (prefers-color-scheme: dark) {
  :root {
    --background: #000;
    --text: #fff;
  }
}

